fixes on mobile version

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -101,6 +101,10 @@
     position: inherit;
     top: 0;
     left: 0;
+    width: 36%;
+  }
+  .about-us-left-container{
+    display:none;
   }
   .option-badge {
     -webkit-transform: translate(10px, -10px);
@@ -229,14 +233,129 @@
   }
 }
 
-@media only screen and (max-width: 767px) {
+
+@media only screen and (max-width: 490px) and (min-width:452px)  {
+  .service-card{
+    padding: 22px 51px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 490px) and (min-width:419px)  {
+  .service-card{
+    padding: 22px 41px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 490px) and (min-width:409px)  {
+  .service-card{
+    padding: 22px 39px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+
+
+
+
+
+@media only screen and (max-width: 408px) and (min-width:350px)  {
+  .service-card{
+    padding: 22px 23px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 408px) and (min-width:320px)  {
+  .service-card{
+    padding: 22px 18px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 408px) and (min-width:308px)  {
+  .service-card{
+    padding: 22px 15px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 408px) and (min-width:300px)  {
+  .service-card{
+    padding: 22px 10px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 408px) and (min-width:288px)  {
+  .service-card{
+    padding: 22px 10px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 408px) and (min-width:270px)  {
+  .service-card{
+    padding: 22px 4px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 408px) and (min-width:264px)  {
+  .service-card{
+    padding: 22px 4px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+@media only screen and (max-width: 408px) and (min-width:260px)  {
+  .service-card{
+    padding: 22px 3px !important;
+  }
+  .service-card .service-card-thumb{
+    margin-left: 10px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+}
+/* @media only screen and (max-width: 325) and (min-width:300px) {
+  .service-card{
+    padding: 22px 15px !important;
+  }
+  .hide-from-mobile{
+    display: none;
+  }
+} */
+@media only screen and (max-width: 769px)  {
+  #our_presence_section{
+    padding-top: 40px;
+    padding-left: 57px;
+    min-height: 499px !important;
+  }
+  
+  .service-card {
+    margin-left: 0px;
+    padding: 16px 61px;
+  }
+  .footer-logo{
+    width: 45%;
+  }
   .override-our-presence-map-mobile{
     max-width: 100% !important;
     margin-top: -39px !important;
     margin-left: -72px !important;
-  }
-  .service-card {
-    margin-left: 0px;
   }
   .override-map-image-mobile{
     max-width: 100% !important; 
@@ -414,14 +533,12 @@
   .about-content ul li:before {
     font-size: 18px;
   }
-  .service-card {
-    padding: 30px 39px;
-  }
   .service-card-thumb {
     width: 100px;
     height: 100px;
     font-size: 45px;
     margin-bottom: 15px;
+    
   }
   .service-card-body h3 {
     font-size: 18px;
