--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3294,6 +3294,16 @@ select.form-control {
   min-height: 575px !important;
   margin-top: 59px;
 }
+.map-image-container{
+  background-image: url(../images/backgrounds/map-presence.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  min-height: 344px !important;
+  /* margin-top: 59px; */
+  margin-left: -22px;
+}
 .override-footer-titles{
   color: #7a7878 !important;
 }
